--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,3 +5,7 @@ body{
 .table tbody tr td input.form-control, .table tbody tr td textarea.form-control, .table tbody tr td select.form-control{
 	width:200px;
 }
+
+.table tbody tr td {
+	font-size:10px !important;
+}
